# ChangeLog for x11-themes/jimmac-dmz
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Jan 2009; Justin Lecher (jlec) <jlec@j-schmitz.net> +metadata.xml:
  Setup x11-themes/jimmac-dmz
