@@ -1,41 +1,41 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
+EAPI=5
+
 MY_PN="${PN//jimmac-/}"
+
 DESCRIPTION="A high quality set of Xfree 4.3.0 animated mouse cursors"
 HOMEPAGE="http://jimmac.musichall.cz/themes.php?skin=7"
 SRC_URI="http://jimmac.musichall.cz/zip/vanilla-${MY_PN}-${PV}.tar.bz2"
-RESTRICT="mirror"
+
 LICENSE="MIT"
 SLOT="0"
 KEYWORDS="~amd64 x86"
 IUSE=""
 
-DEPEND=""
-RDEPEND=""
-
-S=${WORKDIR}/Vanilla-DMZ-AA
+S="${WORKDIR}"/Vanilla-DMZ-AA
 
 src_install() {
 	insinto /usr/share/cursors/xorg-x11/${MY_PN}
-	doins -r index.theme cursors || die "failed to install cursors"
+	doins -r index.theme cursors
 }
 
 pkg_postinst() {
 	einfo "To use this set of cursors, edit or create the file ~/.Xdefaults"
 	einfo "and add the following line:"
 	einfo "Xcursor.theme: ${MY_PN}"
-	einfo ""
+	elog ""
 	einfo "Also, you can change the size by adding a line like:"
 	einfo "Xcursor.size: 48"
-	einfo ""
+	elog ""
 	einfo "To globally use this set of mouse cursors edit the file:"
 	einfo "	  /etc/env.d/99xcursors"
 	einfo "and change add the line:"
 	einfo "	  XCURSORS_THEME="${MY_PN}""
 	einfo "Note this will be overruled by a user's ~/.Xdefaults file."
-	einfo ""
+	elog ""
 	ewarn "If you experience flickering, try setting the following line in"
 	ewarn "the Device section of your XF86Config:"
 	ewarn "Option \"HWCursor\" \"false\""
