@@ -1,6 +1,10 @@
-# ChangeLog for x11-themes/jimmac-dmz
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# ChangeLog for x11-themes/jimmac-dmz-aa
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  02 Jul 2013; Justin Lecher <jlec@gentoo.org> jimmac-dmz-aa-0.4.ebuild,
+  metadata.xml:
+  Bump to EAPI=5
 
   22 Jan 2009; Justin Lecher (jlec) <jlec@j-schmitz.net> +metadata.xml:
   Setup x11-themes/jimmac-dmz
